# ensoul-sdk

./: .gitignore  GETTING_STARTED.md  MIGRATION.md  Package.swift  README.md
.github/workflows/: sdk-publish.yml
cpp/: CMakeLists.txt  README.md
cpp/include/ensoul/: auth.hpp  config.hpp  ensoul.hpp  errors.hpp  http_client.hpp  pagination.hpp  rate_limit.hpp  streaming.hpp
cpp/include/ensoul/resources/: aggregate.hpp  audit.hpp  auth_resource.hpp  chat.hpp  domains.hpp  frameworks.hpp  health.hpp  info.hpp  memory.hpp  personas.hpp  sessions.hpp  simulations.hpp
cpp/src/: ensoul.cpp  errors.cpp  http_client.cpp  streaming.cpp
cpp/tests/: fixtures.hpp  integration_test.cpp  mock_transport.hpp  test_chat.cpp  test_client.cpp  test_config.cpp  test_conformance.cpp  test_errors.cpp  test_main.cpp  test_pagination.cpp  test_personas.cpp  test_streaming.cpp
godot/: .gitignore  LICENSE  README.md  plugin.cfg  plugin.gd  project.godot
godot/addons/ensoul/: ensoul_client.gd  ensoul_config.gd  ensoul_http.gd  ensoul_page.gd  ensoul_server_sent_event.gd  ensoul_sse_stream.gd  plugin.cfg
godot/addons/ensoul/resources/: ensoul_aggregate.gd  ensoul_audit.gd  ensoul_auth.gd  ensoul_chat.gd  ensoul_domains.gd  ensoul_frameworks.gd  ensoul_health.gd  ensoul_info.gd  ensoul_memory.gd  ensoul_personas.gd  ensoul_sessions.gd  ensoul_simulations.gd
godot/tests/: test_conformance.gd  test_integration.gd  test_runner.gd
kotlin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/src/main/kotlin/ai/ensoul/sdk/: Auth.kt  Config.kt  EnsoulClient.kt  Errors.kt  HttpClient.kt  Pagination.kt  RateLimit.kt  Streaming.kt
kotlin/src/main/kotlin/ai/ensoul/sdk/resources/: Aggregate.kt  Audit.kt  AuthResource.kt  Chat.kt  Domains.kt  Frameworks.kt  Health.kt  Info.kt  Memory.kt  Personas.kt  Sessions.kt  Simulations.kt
kotlin/src/test/kotlin/ai/ensoul/sdk/: ChatTest.kt  ClientTest.kt  ConfigTest.kt  ConformanceTest.kt  ErrorsTest.kt  IntegrationTest.kt  PaginationTest.kt  PersonasTest.kt  StreamingTest.kt
python/: README.md  pyproject.toml
python/examples/: create_domain.py  quickstart.py
python/src/ensoul/: __init__.py  _types.py  auth.py  client.py  config.py  errors.py  http.py  pagination.py  rate_limit.py  streaming.py
python/src/ensoul/resources/: __init__.py  aggregate.py  audit.py  auth_resource.py  chat.py  domains.py  frameworks.py  health.py  info.py  memory.py  personas.py  sessions.py  simulations.py
python/tests/: conftest.py  test_chat.py  test_client.py  test_config.py  test_conformance.py  test_errors.py  test_http_retry.py  test_integration.py  test_pagination.py  test_personas.py  test_streaming.py
swift/: Package.swift  README.md
swift/Sources/Ensoul/: AnyCodable.swift  Auth.swift  Config.swift  Ensoul.swift  Errors.swift  HTTPClient.swift  Pagination.swift  RateLimit.swift  Streaming.swift
swift/Sources/Ensoul/Resources/: Aggregate.swift  Audit.swift  AuthResource.swift  Chat.swift  DomainConfigModels.swift  Domains.swift  Frameworks.swift  Health.swift  Info.swift  Memory.swift  Personas.swift  RawPage.swift  Sessions.swift  Simulations.swift
swift/Tests/EnsoulTests/: ChatTests.swift  ClientTests.swift  ConfigTests.swift  ConformanceTests.swift  ErrorTests.swift  IntegrationTests.swift  MockURLProtocol.swift  PaginationTests.swift  PersonasTests.swift  StreamingTests.swift  TestFixtures.swift
typescript/: .npmrc  README.md  package-lock.json  package.json  tsconfig.json
typescript/examples/: create-domain.ts
typescript/src/: auth.ts  client.ts  config.ts  errors.ts  http.ts  index.ts  pagination.ts  rate-limit.ts  streaming.ts
typescript/src/resources/: aggregate.ts  audit.ts  auth-resource.ts  chat.ts  domains.ts  frameworks.ts  health.ts  info.ts  memory.ts  personas.ts  sessions.ts  simulations.ts
typescript/tests/: chat.test.ts  client.test.ts  config.test.ts  conformance.test.ts  errors.test.ts  http-retry.test.ts  integration.test.ts  pagination.test.ts  personas.test.ts  streaming.test.ts
unity/: Ensoul.sln  README.md  package.json
unity/Runtime/: Auth.cs  Ensoul.asmdef  Ensoul.csproj  EnsoulClient.cs  EnsoulConfig.cs  EnsoulExceptions.cs  EnsoulHttpClient.cs  Errors.cs  Pagination.cs  RateLimit.cs  Streaming.cs
unity/Runtime/Resources/: AggregateResource.cs  AuditResource.cs  AuthResource.cs  ChatResource.cs  DomainsResource.cs  FrameworksResource.cs  HealthResource.cs  InfoResource.cs  MemoryResource.cs  PersonasResource.cs  SessionsResource.cs  SimulationsResource.cs
unity/Tests/: ChatTests.cs  ClientTests.cs  ConfigTests.cs  ConformanceTests.cs  Ensoul.Tests.asmdef  Ensoul.Tests.csproj  ErrorTests.cs  IntegrationTests.cs  MockHttpHandler.cs  PaginationTests.cs  PersonasTests.cs  StreamingTests.cs  TestFixtures.cs
