[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ensoul"
version = "0.2.0"
description = "Official Python SDK for the Ensoul API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Ensoul", email = "support@ensoul-ai.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://ensoul-ai.com"
Documentation = "https://ensoul-ai.com/products/studio/docs"
Repository = "https://github.com/ensoul-ai/ensoul-sdk"
Issues = "https://github.com/ensoul-ai/ensoul-sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ensoul"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
